# tmcrypt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Codestyle.md  architecture.md
include/tncrypt/: tn_cipher.h  tn_cipher_info.h  tn_defines.h  tn_key_info.h  tn_status.h  tn_types.h
include/tncrypt/cipher/: tn_kuznyechik.h  tn_magma.h
src/primitives/: tn_magma.c
test/: tn_test.c
